[package]
name = "detert-silence-simulation"
version = "0.1.0"
edition = "2021"

[lib]
name = "detert_silence"
path = "src/lib.rs"

[[bin]]
name = "detert"
path = "src/main.rs"

[dependencies]
rand        = { version = "0.8", features = ["small_rng"] }
csv         = "1.3"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
clap        = { version = "4.5", features = ["derive"] }
chrono      = "0.4"

# social-simulation framework (socsim) — ABM engine. Detert & Edmondson (2011)
# embed the 5 Implicit Voice Theory rules as a self-reflection layer inside the
# LLM `voice_decision`, contrasted with a rule-based logit ablation. The pinned
# commit lives in Cargo.lock.
socsim-core   = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-core" }
socsim-engine = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-engine" }
socsim-net    = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-net" }
# LLM-driven agents — Ollama first / OpenAI fallback + prompt cache + shared harness.
socsim-llm    = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-llm", features = ["live"] }
# Output helpers (timestamp / run-dir / latest symlink / CSV+JSON writers, MetadataCollector lives in socsim-llm).
socsim-results = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-results" }
